--- a/corelecturenotes/part2_data_manipulation_with_dplyr.Rmd
+++ b/corelecturenotes/part2_data_manipulation_with_dplyr.Rmd
@@ -22,11 +22,9 @@ notes<-params$notes
 
 # dplyr is the main workhorse of the tidyverse
 
-# Data transformation {#transform}
-
 ## Introduction
 
-Visualisation is an important tool for insight generation, but it is rare that you get the data in exactly the right form you need. Often you'll need to create some new variables or summaries, or maybe you just want to rename the variables or reorder the observations in order to make the data a little easier to work with. You'll learn how to do all that (and more!) in this chapter, which will teach you how to transform your data using the dplyr package and a new dataset on flights departing New York City in 2013.
+This lesson draws on Chapter XX of R for Data Science. 
 
 ### Prerequisites
 
