--- a/slides/part2_dplyr.Rmd
+++ b/slides/part2_dplyr.Rmd
@@ -222,42 +222,26 @@ filter(df, x > 1)
 filter(df, is.na(x) | x > 1)
 ```
 
-### Exercises
-
-1.  Find all flights that
-
-    1. Had an arrival delay of two or more hours
-    1. Flew to Houston (`IAH` or `HOU`)
-    1. Were operated by United, American, or Delta
-    1. Departed in summer (July, August, and September)
-    1. Arrived more than two hours late, but didn't leave late
-    1. Were delayed by at least an hour, but made up over 30 minutes in flight
-    1. Departed between midnight and 6am (inclusive)
-
-1.  Another useful dplyr filtering helper is `between()`. What does it do?
-    Can you use it to simplify the code needed to answer the previous 
-    challenges?
-
-1.  How many flights have a missing `dep_time`? What other variables are 
-    missing? What might these rows represent?
-
-1.  Why is `NA ^ 0` not missing? Why is `NA | TRUE` not missing?
-    Why is `FALSE & NA` not missing? Can you figure out the general
-    rule?  (`NA * 0` is a tricky counterexample!)
 
 ## Arrange rows with `arrange()`
 
-`arrange()` works similarly to `filter()` except that instead of selecting rows, it changes their order. It takes a data frame and a set of column names (or more complicated expressions) to order by. If you provide more than one column name, each additional column will be used to break ties in the values of preceding columns:
+`arrange()` changes the order of rows order. It takes a data frame and a set of column names (or more complicated expressions) to order by. If you provide more than one column name, each additional column will be used to break ties in the values of preceding columns:
 
 ```{r}
 arrange(flights, year, month, day)
 ```
+
+## Arrange rows with `arrange()`
+
 
 Use `desc()` to re-order by a column in descending order:
 
 ```{r}
 arrange(flights, desc(arr_delay))
 ```
+
+
+## Arrange rows with `arrange()`
 
 Missing values are always sorted at the end:
 
@@ -267,23 +251,10 @@ arrange(df, x)
 arrange(df, desc(x))
 ```
 
-### Exercises
 
-1.  How could you use `arrange()` to sort all missing values to the start?
-    (Hint: use `is.na()`).
-    
-1.  Sort `flights` to find the most delayed flights. Find the flights that
-    left earliest.
+## Select columns with `select()` 
 
-1.  Sort `flights` to find the fastest flights.
-
-1.  Which flights travelled the longest? Which travelled the shortest?
-
-## Select columns with `select()` {#select}
-
-It's not uncommon to get datasets with hundreds or even thousands of variables. In this case, the first challenge is often narrowing in on the variables you're actually interested in. `select()` allows you to rapidly zoom in on a useful subset using operations based on the names of the variables.
-
-`select()` is not terribly useful with the flights data because we only have 19 variables, but you can still get the general idea:
+`select()` chooses the columns you want out of the whole set of columns 
 
 ```{r}
 # Select columns by name
@@ -293,6 +264,9 @@ select(flights, year:day)
 # Select all columns except those from year to day (inclusive)
 select(flights, -(year:day))
 ```
+
+
+## Helpers for `select()`
 
 There are a number of helper functions you can use within `select()`:
 
@@ -308,7 +282,8 @@ There are a number of helper functions you can use within `select()`:
    
 *  `num_range("x", 1:3)` matches `x1`, `x2` and `x3`.
    
-See `?select` for more details.
+   
+## Use `rename()` to rename variables     
 
 `select()` can be used to rename variables, but it's rarely useful because it drops all of the variables not explicitly mentioned. Instead, use `rename()`, which is a variant of `select()` that keeps all the variables that aren't explicitly mentioned:
 
@@ -316,33 +291,8 @@ See `?select` for more details.
 rename(flights, tail_num = tailnum)
 ```
 
-Another option is to use `select()` in conjunction with the `everything()` helper. This is useful if you have a handful of variables you'd like to move to the start of the data frame.
+Note that it's old_name  = new_name. This always throws me off. 
 
-```{r}
-select(flights, time_hour, air_time, everything())
-```
-
-### Exercises
-
-1.  Brainstorm as many ways as possible to select `dep_time`, `dep_delay`,
-    `arr_time`, and `arr_delay` from `flights`.
-    
-1.  What happens if you include the name of a variable multiple times in
-    a `select()` call?
-  
-1.  What does the `one_of()` function do? Why might it be helpful in conjunction
-    with this vector?
-    
-    ```{r}
-    vars <- c("year", "month", "day", "dep_delay", "arr_delay")
-    ```
-    
-1.  Does the result of running the following code surprise you?  How do the
-    select helpers deal with case by default? How can you change that default?
-
-    ```{r, eval = FALSE}
-    select(flights, contains("TIME"))
-    ```
 
 ## Add new variables with `mutate()`
 
