--- a/slides/part2_dplyr.Rmd
+++ b/slides/part2_dplyr.Rmd
@@ -247,6 +247,15 @@ arrange(df, x)
 arrange(df, desc(x))
 ```
 
+## Exercise
+1.  Sort `flights` to find the fastest flights.
+
+## Solution
+```{r}
+flights %>% 
+  arrange(air_time)
+```
+
 
 ## Select columns with `select()` 
 
@@ -344,70 +353,17 @@ transmute(flights,
 )
 ```
 
-## Useful helpers for `mutate()`
 
 There are many functions for creating new variables that you can use with `mutate()`. The key property is that the function must be vectorised: it must take a vector of values as input, return a vector with the same number of values as output. There's no way to list every possible function that you might use, but here's a selection of functions that are frequently useful:
 
-*   Arithmetic operators: `+`, `-`, `*`, `/`, `^`. These are all vectorised,
-    using the so called "recycling rules". If one parameter is shorter than 
-    the other, it will be automatically extended to be the same length. This 
-    is most useful when one of the arguments is a single number: `air_time / 60`,
-    `hours * 60 + minute`, etc.
-    
-    Arithmetic operators are also useful in conjunction with the aggregate
-    functions you'll learn about later. For example, `x / sum(x)` calculates 
-    the proportion of a total, and `y - mean(y)` computes the difference from 
-    the mean.
-    
-*   Modular arithmetic: `%/%` (integer division) and `%%` (remainder), where
-    `x == y * (x %/% y) + (x %% y)`. Modular arithmetic is a handy tool because 
-    it allows you to break integers up into pieces. For example, in the 
-    flights dataset, you can compute `hour` and `minute` from `dep_time` with:
-    
-    ```{r}
-    transmute(flights,
-      dep_time,
-      hour = dep_time %/% 100,
-      minute = dep_time %% 100
-    )
-    ```
-  
-*   Logs: `log()`, `log2()`, `log10()`. Logarithms are an incredibly useful
-    transformation for dealing with data that ranges across multiple orders of
-    magnitude. They also convert multiplicative relationships to additive, a
-    feature we'll come back to in modelling.
-    
-    All else being equal, I recommend using `log2()` because it's easy to
-    interpret: a difference of 1 on the log scale corresponds to doubling on
-    the original scale and a difference of -1 corresponds to halving.
 
-*   Offsets: `lead()` and `lag()` allow you to refer to leading or lagging 
-    values. This allows you to compute running differences (e.g. `x - lag(x)`) 
-    or find when values change (`x != lag(x))`. They are most useful in 
-    conjunction with `group_by()`, which you'll learn about shortly.
-    
-    ```{r}
-    (x <- 1:10)
-    lag(x)
-    lead(x)
-    ```
-  
-*   Cumulative and rolling aggregates: R provides functions for running sums,
-    products, mins and maxes: `cumsum()`, `cumprod()`, `cummin()`, `cummax()`; 
-    and dplyr provides `cummean()` for cumulative means. If you need rolling
-    aggregates (i.e. a sum computed over a rolling window), try the RcppRoll
-    package.
-    
-    ```{r}
-    x
-    cumsum(x)
-    cummean(x)
-    ```
 
 *   Logical comparisons, `<`, `<=`, `>`, `>=`, `!=`, which you learned about
     earlier. If you're doing a complex sequence of logical operations it's 
     often a good idea to store the interim values in new variables so you can
     check that each step is working as expected.
+
+## Useful helpers for `mutate()`
 
 *   Ranking: there are a number of ranking functions, but you should 
     start with `min_rank()`. It does the most usual type of ranking 
@@ -419,8 +375,9 @@ There are many functions for creating new variables that you can use with `mutat
     min_rank(y)
     min_rank(desc(y))
     ```
+## Useful helpers for `mutate()`
     
-    If `min_rank()` doesn't do what you need, look at the variants
+   If `min_rank()` doesn't do what you need, look at the variants
     `row_number()`, `dense_rank()`, `percent_rank()`, `cume_dist()`,
     `ntile()`.  See their help pages for more details.
     
@@ -441,7 +398,6 @@ The last key verb is `summarise()`. It collapses a data frame to a single row:
 summarise(flights, delay = mean(dep_delay, na.rm = TRUE))
 ```
 
-(We'll come back to what that `na.rm = TRUE` means very shortly.)
 
 `summarise()` is not terribly useful unless we pair it with `group_by()`. This changes the unit of analysis from the complete dataset to individual groups. Then, when you use the dplyr verbs on a grouped data frame they'll be automatically applied "by group". For example, if we applied exactly the same code to a data frame grouped by date, we get the average delay per date:
 
@@ -450,58 +406,8 @@ by_day <- group_by(flights, year, month, day)
 summarise(by_day, delay = mean(dep_delay, na.rm = TRUE))
 ```
 
-Together `group_by()` and `summarise()` provide one of the tools that you'll use most commonly when working with dplyr: grouped summaries. But before we go any further with this, we need to introduce a powerful new idea: the pipe.
 
-### Combining multiple operations with the pipe
 
-Imagine that we want to explore the relationship between the distance and average delay for each location. Using what you know about dplyr, you might write code like this:
-
-```{r, fig.width = 6}
-by_dest <- group_by(flights, dest)
-delay <- summarise(by_dest,
-  count = n(),
-  dist = mean(distance, na.rm = TRUE),
-  delay = mean(arr_delay, na.rm = TRUE)
-)
-delay <- filter(delay, count > 20, dest != "HNL")
-
-# It looks like delays increase with distance up to ~750 miles 
-# and then decrease. Maybe as flights get longer there's more 
-# ability to make up delays in the air?
-ggplot(data = delay, mapping = aes(x = dist, y = delay)) +
-  geom_point(aes(size = count), alpha = 1/3) +
-  geom_smooth(se = FALSE)
-```
-
-There are three steps to prepare this data:
-
-1.  Group flights by destination.
-
-1.  Summarise to compute distance, average delay, and number of flights.
-
-1.  Filter to remove noisy points and Honolulu airport, which is almost
-    twice as far away as the next closest airport.
-
-This code is a little frustrating to write because we have to give each intermediate data frame a name, even though we don't care about it. Naming things is hard, so this slows down our analysis. 
-
-There's another way to tackle the same problem with the pipe, `%>%`:
-
-```{r}
-delays <- flights %>% 
-  group_by(dest) %>% 
-  summarise(
-    count = n(),
-    dist = mean(distance, na.rm = TRUE),
-    delay = mean(arr_delay, na.rm = TRUE)
-  ) %>% 
-  filter(count > 20, dest != "HNL")
-```
-
-This focuses on the transformations, not what's being transformed, which makes the code easier to read. You can read it as a series of imperative statements: group, then summarise, then filter. As suggested by this reading, a good way to pronounce `%>%` when reading code is "then".
-
-Behind the scenes, `x %>% f(y)` turns into `f(x, y)`, and `x %>% f(y) %>% g(z)` turns into `g(f(x, y), z)` and so on. You can use the pipe to rewrite multiple operations in a way that you can read left-to-right, top-to-bottom. We'll use piping frequently from now on because it considerably improves the readability of code, and we'll come back to it in more detail in [pipes].
-
-Working with the pipe is one of the key criteria for belonging to the tidyverse. The only exception is ggplot2: it was written before the pipe was discovered. Unfortunately, the next iteration of ggplot2, ggvis, which does use the pipe, isn't quite ready for prime time yet. 
 
 ### Missing values
 
@@ -513,6 +419,8 @@ flights %>%
   summarise(mean = mean(dep_delay))
 ```
 
+## Missing values
+
 We get a lot of missing values! That's because aggregation functions obey the usual rule of missing values: if there's any missing value in the input, the output will be a missing value. Fortunately, all aggregation functions have an `na.rm` argument which removes the missing values prior to computation:
 
 ```{r}
@@ -520,6 +428,8 @@ flights %>%
   group_by(year, month, day) %>% 
   summarise(mean = mean(dep_delay, na.rm = TRUE))
 ```
+
+## Missing values
 
 In this case, where missing values represent cancelled flights, we could also tackle the problem by first removing the cancelled flights. We'll save this dataset so we can reuse in the next few examples.
 
@@ -532,7 +442,7 @@ not_cancelled %>%
   summarise(mean = mean(dep_delay))
 ```
 
-### Counts
+## Counts
 
 Whenever you do any aggregation, it's always a good idea to include either a count (`n()`), or a count of non-missing values (`sum(!is.na(x))`). That way you can check that you're not drawing conclusions based on very small amounts of data. For example, let's look at the planes (identified by their tail number) that have the highest average delays:
 
@@ -548,6 +458,16 @@ ggplot(data = delays, mapping = aes(x = delay)) +
 ```
 
 
+
+## Exercise
+1.  Find all flights that
+
+    1. Had an arrival delay of two or more hours
+    1. Flew to Houston (`IAH` or `HOU`)
+    1. Were operated by United, American, or Delta
+    1. Departed in summer (July, August, and September)
+    
+    
 
 
 ## Grouped summaries
@@ -570,16 +490,17 @@ ggplot(data = delays, mapping = aes(x = delay)) +
     
 ##   Counts
     
-    Counts are so useful that dplyr provides a simple helper if all you want is 
+Counts are so useful that dplyr provides a simple helper if all you want is 
     a count:
     
     ```{r}
     not_cancelled %>% 
       count(dest)
     ```
+
 ##   Counts
     
-    You can optionally provide a weight variable. For example, you could use 
+You can optionally provide a weight variable. For example, you could use 
     this to "count" (sum) the total number of miles a plane flew:
     
     ```{r}
@@ -660,8 +581,68 @@ Grouping is most useful in conjunction with `summarise()`, but you can also do c
       select(year:day, dest, arr_delay, prop_delay)
     ```
 
+## Exercise
 
-## Advanced verbs: `mutate_at()`, `summarize_at()`
+1.  Come up with another approach that will give you the same output as 
+    `not_cancelled %>% count(dest)` and 
+    `not_cancelled %>% count(tailnum, wt = distance)` (without using 
+    `count()`).
+
+1.  Which carrier has the worst delays? Challenge: can you disentangle the
+    effects of bad airports vs. bad carriers? Why/why not? (Hint: think about
+    `flights %>% group_by(carrier, dest) %>% summarise(n())`)
+
+## Advanced verbs: `summarize_all()`, `summarize_at()`, `summarize_if()`
+
+The `_all`, `_at` and `_if` suffixes work on `mutate`, `summarize`, and `transmute`. (British English speakers, you can use `summarise` too.)
+
+- `_all` applies the operation to all columns
+- `_at` applies the operation only to named columns
+- `_if` applies the operation if some condition is true 
+
+
+## `summarize_all()`
+    ```{r}
+iris %>%
+  group_by(Species) %>%
+  summarise_all(mean)
+```
+
+## `summarize_at()`
+
+```{r}
+starwars %>% 
+summarise_at(c("height", "mass"), mean, na.rm = TRUE)
+
+```
+
+## `mutate_at()` with a helper to choose columns
+
+```{r}
+iris %>% 
+  mutate_at(vars(matches("Sepal")), log)
+```
+
+## `summarise_if`
+
+```{r}
+# The _if() variants apply a predicate function (a function that
+# returns TRUE or FALSE) to determine the relevant subset of
+# columns. Here we apply mean() to the numeric columns:
+starwars %>% summarise_if(is.numeric, mean, na.rm = TRUE)
+#> # A tibble: 1 x 3
+#>   height  mass birth_year
+#>    <dbl> <dbl>      <dbl>
+#> 1   174.  97.3       87.6
+```
+
+
+
+
+
+
+
+
 
 
 
